--- a/testPlots/index.html
+++ b/testPlots/index.html
@@ -12,11 +12,12 @@
 
   <body>
 
-  
+
     <div id="main">
       <div id="sequence"></div>
       <div id="chart">
         <div id="explanation" style="visibility: hidden;">
+         <span id="name"></span><br/>
           <span id="percentage"></span><br/>
           of carbon emissions
         </div>
