--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
       <!--<script src="bower_components/d3.v2.min.js"></script>-->
       <!-- <link rel="stylesheet" type="text/css"
         href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"> -->
-      <link rel="stylesheet" type="text/css" href="plots/sequences.css"/>
+      <link rel="stylesheet" type="text/css" href="testPlots/sequences.css"/>
 
 
 <style>
+
+.body {
+
+}
 .header {
 
 
@@ -85,12 +89,14 @@
 }
 .left-side {
   /*background: yellow;*/
+  padding-top:10px;
 }
 .right-side {
   /*background: #ccc;*/
 }
 .graph-content {
   /*background: #ff0099;*/
+  padding-top: 20px;
 }
 
 .scenario-content {
@@ -104,6 +110,10 @@
   color: white;
 
   text-align: center;
+}
+
+.scenario-content img {
+  margin-left: -12px;
 }
 .scenario-1 {
   background: green;
@@ -135,11 +145,14 @@
   visibility:hidden;
 }
 
+.
 /*
 .uk-grid>* {
   padding-left: 0;
 }*/
-
+.uk-tab>li {
+  padding-top:9px;
+}
 </style>
 
 
@@ -149,7 +162,9 @@
 
 <div class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-        <a class="pure-menu-heading" href="">Your Site</a>
+        <a class="pure-menu-heading" href="">
+        <img src="images/logo.png"/>
+        </a>
 
 
         <div class="social-container">
@@ -194,7 +209,7 @@
             <ul class="uk-nav uk-nav-side js-navigation">
                 <li class="uk-active"><a href="#" tag="0">Industry</a></li>
                 <li><a href="#" tag="1">Pollutants</a></li>
-                <li><a href="#" tag="2">Area</a></li>
+                <li><a href="#" tag="2">How Can I Do More?</a></li>
             </ul>
           </div>
           <div class="uk-width-2-3 right-side uk-height-1-1">
@@ -211,24 +226,36 @@
                 <li class="uk-active" aria-hidden="false">
                   <div class="graph-content">
 
-                    <div id="main">
-                         <div id="sequence"></div>
-                         <div id="chart">
-                           <div id="explanation" style="visibility: hidden;">
-                             <span id="percentage"></span><br/>
-                             of visits begin with this sequence of pages
-                           </div>
-                         </div>
-                       </div>
-                       <div id="sidebar">
-                         <input type="checkbox" id="togglelegend"> Legend<br/>
-                         <div id="legend" style="visibility: hidden;"></div>
-                       </div>
-                       <script type="text/javascript" src="plots/sequences.js"></script>
-                       <script type="text/javascript">
-                         // Hack to make this example display correctly in an iframe on bl.ocks.org
-                         d3.select(self.frameElement).style("height", "700px");
-                     </script>
+                    <h2>How Much Does Your Industry Weigh?</h2>
+                    <div>
+
+                      This plot shows who and what is emitting carbon. Explore and find who is the worse emitter. What do you think can be done to reduce carbon emissions?
+  This data is provided by The National Green House Inventory.
+
+                    </div>
+                    <div id="main" style="color:red;">
+                      <!-- <div id="sequence"></div> -->
+                      <div id="chart">
+                        <div id="plot-explanation" style="visibility: hidden;">
+                         <span id="plot-name"></span><br/>
+                          <span id="plot-percentage"></span><br/>
+                          of carbon emissions
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div id="sidebar">
+                      <input type="checkbox" id="togglelegend"> Legend<br/>
+                      <div id="legend" style="visibility: hidden;"></div>
+                    </div>
+                    <script type="text/javascript" src="testPlots/sequences.js"></script>
+                    <script type="text/javascript">
+                      // Hack to make this example display correctly in an iframe on bl.ocks.org
+                      d3.select(self.frameElement).style("height", "700px");
+                  </script>
+
+
 
                   </div>
                 </li>
@@ -242,7 +269,17 @@
 
                       <img src="images/industry-2.png" />
                     </div>
-                    <div class="uk-width-1-3 scenario-3"><h3>What Can I do?</h3>Lorum ipsum</div>
+                    <div class="uk-width-1-3 scenario-3"><h3>What Can I do?</h3>
+
+
+                    <ul style="font-size:0.8em;">
+
+                    <li>Public Energy and Head Production makes up 37% of carbon emissions. You can reduce your electricity use by installing insulation, double glassed windows and turning off appliances</li>
+                        <li>Road transportation make sup of 15.9% of carbon emissions. Walk and catch public transport to reduce the amount. Even small actions like making sure your tyres are at the right pressure will reduce the amount of fossils fuels are being burnt</li>
+                          <li>10% of carbon emissions are produced by animals raised for meat. Try having one meat free day a week</li>
+
+                    </ul>
+                    </div>
                     </div>
 
                 </li>
@@ -259,7 +296,16 @@
                 <li class="uk-active" aria-hidden="false">
                   <div class="graph-content">
 
+                    <h2>How Hefty is your Pollution?</h2>
 
+
+                    <div>
+
+                      This plot shows who and what is emitting carbon. Explore and find who is the worse emitter. What do you think can be done to reduce carbon emissions?
+                    This data is provided by The National Green House Inventory.
+
+                    </div>
+                    <br/>
                     <iframe width="500" height="300" scrolling="no" frameborder="no"
         src="https://www.google.com/fusiontables/embedviz?q=select+col0+from+1_9CpzzKICdERWJKUlNjoswt-qkOZFS2aoWwaT-KB+where+col15+%3D+&#39;Air+Total&#39;&amp;viz=MAP&amp;h=false&amp;lat=-37.59307231807633&amp;lng=144.51358411718752&amp;t=1&amp;z=8&amp;l=col0&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
 
@@ -275,7 +321,17 @@
 
                       <img src="images/industry-2.png" />
                     </div>
-                    <div class="uk-width-1-3 scenario-3"><h3>What Can I do?</h3>Lorum ipsum</div>
+                    <div class="uk-width-1-3 scenario-3"><h3>What Can I do?</h3>
+
+                      <ul style="font-size:0.8em;">
+
+                      <li>Public Energy and Head Production makes up 37% of carbon emissions. You can reduce your electricity use by installing insulation, double glassed windows and turning off appliances</li>
+                          <li>Road transportation make sup of 15.9% of carbon emissions. Walk and catch public transport to reduce the amount. Even small actions like making sure your tyres are at the right pressure will reduce the amount of fossils fuels are being burnt</li>
+                            <li>10% of carbon emissions are produced by animals raised for meat. Try having one meat free day a week</li>
+
+                      </ul>
+
+                    </div>
                     </div>
 
                 </li>
@@ -286,8 +342,10 @@
 
 
               <div class="content">
-                  <h2 class="content-head is-center">Dolore magna aliqua. Uis aute irure.</h2>
-
+                  <h2 class="content-head is-center">Write to your member of parliment</h2>
+                  <div>
+                  You can do more by writing to your member of parliment. Select your teritory and write a message and we will send on an email to the relevant representative.
+                  </div>
                   <div class="pure-g">
                       <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
                           <form class="pure-form pure-form-stacked">
@@ -296,33 +354,34 @@
                                   <label for="name">Your Name</label>
                                   <input id="name" type="text" placeholder="Your Name">
 
+                                  <div class="uk-button-dropdown" data-uk-dropdown="" aria-haspopup="true" aria-expanded="false">
+                                    <button class="uk-button">New South Wales <i class="uk-icon-caret-down"></i></button>
 
-                                  <label for="email">Your Email</label>
-                                  <input id="email" type="email" placeholder="Your Email">
+                                      <div class="uk-dropdown uk-dropdown-small">
 
-                                  <label for="password">Your Password</label>
-                                  <input id="password" type="password" placeholder="Your Password">
+                                          <ul class="uk-nav uk-nav-dropdown">
+                                              <li><a href="#">Queensland</a></li>
+                                              <li><a href="#">Victoria</a></li>
+                                          </ul>
 
-                                  <button type="submit" class="pure-button">Sign Up</button>
+                                      </div>
+
+                                  </div>
+
+                                  <label for="password">Message</label>
+                                  <textarea id="password" style="width: 400px;" type="password" placeholder="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                  consequat.">
+
+
+                                  </textarea>
+
+                                  <button type="submit" class="pure-button">Send</button>
                               </fieldset>
                           </form>
                       </div>
 
-                      <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
-                          <h4>Contact Us</h4>
-                          <p>
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                              consequat.
-                          </p>
-
-                          <h4>More Information</h4>
-                          <p>
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                              tempor incididunt ut labore et dolore magna aliqua.
-                          </p>
-                      </div>
                   </div>
 
               </div>
