--- a/testPlots/index.html
+++ b/testPlots/index.html
@@ -16,9 +16,9 @@
     <div id="main">
       <div id="sequence"></div>
       <div id="chart">
-        <div id="explanation" style="visibility: hidden;">
-         <span id="name"></span><br/>
-          <span id="percentage"></span><br/>
+        <div id="plot-explanation" style="visibility: hidden;">
+         <span id="plot-name"></span><br/>
+          <span id="plot-percentage"></span><br/>
           of carbon emissions
         </div>
       </div>
